# imbezil

./: .gitignore  License  README.md
src/: CMakeLists.txt  argparse.hpp  main.cpp
src/Shapes/: CMakeLists.txt  Ellipse.cpp  Ellipse.hpp  Line.cpp  Line.hpp  Quadratic.cpp  Quadratic.hpp  Shape.cpp  Shape.hpp  Triangle.cpp  Triangle.hpp
